--- a/src/components/info/HomeInfo.css
+++ b/src/components/info/HomeInfo.css
@@ -1,11 +1,38 @@
-.only-bg-white{
+.bg-white{
     background-color: #ffffff;
 }
 
 .bg-black{
-    background-color: black;
-    width: 1440px;
-    height: 390px;
+    background-color: rgb(0, 0, 0);
+}
+
+.text-cyan{
+    color: cyan;
+}
+
+.flexshrink-0{
+    flex-shrink: 0;
+}
+
+.btn-learn-more{
+    color: white;
+    border-radius: 8px;
+    background: #7DF9FF;
+    box-shadow: 0px 8px 24px 0px rgba(125, 249, 255, 0.22);
+    text-align: center;
+    flex-shrink: 0;
+    padding: 12px 20px;
+
+}
+
+.btn-schedule-pickup{
+    color: white;
+    border-radius: 8px;
+    background: #7DF9FF;
+    box-shadow: 0px 8px 24px 0px rgba(125, 249, 255, 0.22);
+    text-align: center;
+    flex-shrink: 0;
+    padding: 12px 20px;
 }
 
 .text-one{
@@ -41,11 +68,11 @@
     flex-shrink: 0;
 }
 
-.bg-white{
+/* .bg-white{
     width: 1440px;
     height: 6902px;
     background-color: white;
-}
+} */
 
 .custom-card-img1 {
     width: 76px;
@@ -89,3 +116,41 @@
     font-weight: 600;
     line-height: normal;
 }
+
+
+.shipping-truck{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    padding-top: 100px;
+}
+
+.delivery-boxes{
+    width: 1300px;
+    flex-shrink: 0;
+    padding-top: 30px;
+
+}
+.delivery-boxes-background{
+    background-color: cyan;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 145px;
+    
+}
+
+.sitting-man-background{
+    width: 1180px;
+    height: 277px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: #F5F5F5;
+    margin-top: 210px;
+}
+
