--- a/src/components/info/HomeInfo.css
+++ b/src/components/info/HomeInfo.css
@@ -35,6 +35,18 @@
     padding: 12px 20px;
 }
 
+.btn-FAQs{
+    color: white;
+    border-radius: 8px;
+    background: #7DF9FF;
+    box-shadow: 0px 8px 24px 0px rgba(125, 249, 255, 0.22);
+    text-align: center;
+    font-size: large;
+    font-weight: 500;
+    flex-shrink: 0;
+    width: 120px;
+}
+
 .text-one{
     color: #B9B9B9;
     font-family: Cardium B;
@@ -67,12 +79,6 @@
     height: 383px;
     flex-shrink: 0;
 }
-
-/* .bg-white{
-    width: 1440px;
-    height: 6902px;
-    background-color: white;
-} */
 
 .custom-card-img1 {
     width: 76px;
@@ -153,4 +159,19 @@
     background: #F5F5F5;
     margin-top: 210px;
 }
+
+
+.iPhone-image{
+    display: flex;
+    width: 370px;
+    flex-shrink: 0;
+}
+  
+
+.font-14{
+    font-size: 14px;
+}
+  
+
+
 
