--- a/src/components/info/HomeInfo.css
+++ b/src/components/info/HomeInfo.css
@@ -2,9 +2,10 @@
     background-color: #ffffff;
 }
 
-.bg-black{
+/* .bg-black{
     background-color: rgb(0, 0, 0);
-}
+
+} */
 
 .text-cyan{
     color: cyan;
@@ -16,25 +17,43 @@
 
 .btn-learn-more{
     color: white;
-    border-radius: 8px;
     background: #7DF9FF;
+    border-radius: 8px;
+    border: 1px solid #ffffff; 
     box-shadow: 0px 8px 24px 0px rgba(125, 249, 255, 0.22);
     text-align: center;
     flex-shrink: 0;
     padding: 12px 20px;
 
 }
+
+/* .btn-learn-more:hover {
+    background-color: transparent;
+    border: 1px solid #ffffff; 
+  } */
 
 .btn-schedule-pickup{
     color: white;
-    border-radius: 8px;
     background: #7DF9FF;
+    border: 1px solid #ffffff; 
+    border-radius: 8px;
     box-shadow: 0px 8px 24px 0px rgba(125, 249, 255, 0.22);
     text-align: center;
     flex-shrink: 0;
     padding: 12px 20px;
 }
 
+/* .btn-schedule-pickup:hover {
+    background-color: transparent;
+    border: 1px solid #ffffff; 
+  } */
+
+  .btn:hover {
+    background-color: transparent;
+    border: 1px solid #dbdada; 
+  }
+
+  
 .btn-FAQs{
     color: white;
     border-radius: 8px;
@@ -138,21 +157,9 @@
     padding-top: 30px;
 
 }
-.delivery-boxes-background{
-    background-color: cyan;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 145px;
-    
-}
 
 .sitting-man-background{
-    width: 1180px;
+    width: 1000px;
     height: 277px;
     flex-shrink: 0;
     border-radius: 20px;
@@ -167,10 +174,15 @@
     flex-shrink: 0;
 }
   
-
 .font-14{
     font-size: 14px;
 }
+
+.container-margin{
+    margin-bottom: 580px;
+}
+
+
   
 
 
