--- a/src/components/navbar/NavbarComponent.css
+++ b/src/components/navbar/NavbarComponent.css
@@ -7,22 +7,21 @@
     background: #FEFEFE;
 }
 
-
 .btn-nav-white{
     border: 1px solid #ffffff; 
     border-radius: 0px 10px 10px 10px;
     background: #FFF;
 }
-.btn-nav-white:hover {
+
+.btn-nav-white:hover{
     background-color: transparent;
     border: 1px solid #ffffff; 
-  }
+}
 
 .font-16{
     font-size: 16px;
 }
 
-.bg-body-tertiary
-{
+.bg-body-tertiary{
     background-color: #7DF9FF;
 }
