zip code input field and other corrections

--- a/src/components/info/HomeInfo.css
+++ b/src/components/info/HomeInfo.css
@@ -165,3 +165,14 @@
 .container-margin{
     margin-bottom: 580px;
 }
+
+/* .container-margin-top{
+    margin-top: 580px;
+} */
+
+@media (max-width: 767px) {
+    .container-margin {
+      margin-bottom: 0;
+    }
+  }
+  
