Navbar logo and  ZipCode field adjustment

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,11 @@
 @media (max-width: 768px) {
     .Header-title-font {
-      font-size: 18px; /* Adjust the font size according to your requirement */
+      font-size: 18px; 
     }
   }
   
 
 header {
-    /* min-height: 100vh; */
     background: url('../../assets/boxes-floating-1.png');
     background-size: cover;
     background-repeat: no-repeat;
