--- a/src/components/info/HomeInfo.css
+++ b/src/components/info/HomeInfo.css
@@ -175,4 +175,10 @@
       margin-bottom: 0;
     }
   }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .container-margin {
+        margin-bottom: 0;
+    }
+}
   
